kubernetes/apps/dns/templates/network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-ingress
spec:
  endpointSelector: {}
  ingress:
    - fromEndpoints:
        - {}
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: tailscale-system
    - fromEntities:
        # world is fine here because this is just a lookup to my yaml config
        # trying to restrict ingress here leads to complication. Router does not forward to this anyway
        - world
